Updating index file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1>Hello World!</h1>
-<p>I'm hosted with github pages.</p>
+<p style="font-size: 100px;">I'm hosted with github pages.</p>
 
 </body>
 
