--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
+    <title>Daniel Joji Koons Portfolio</title>
+</head>
 <body>
+        <div class="navbar">
+            <div class="yo">
+                <h1>Yo</h1>
+            </div>
+            <div class="links"> 
+                <ul>
+                    <li>About Me</li>
+                    <li>Portfolio</li>
+                </ul>
+            </div>   
+        </div>
 
-<h1>Hello World!</h1>
-<p style="font-size: 100px;">I'm hosted with github pages.</p>
-
+        <div>
+            <div>
+            <h2>About Me</h2>
+                <hr>
+                <img src="assets/images/profile.jpg" 
+                width="200px" 
+                height="200px">        
+                <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
 </body>
-
 </html>
