Updating initial files

--- a/index.html
+++ b/index.html
@@ -4,38 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- CSS LINKS -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
+
     <title>Daniel Joji Koons Portfolio</title>
 </head>
 <body>
-        <div class="navbar">
-            <div class="yo">
-                <h1>Yo</h1>
-            </div>
-            <div class="links"> 
-                <ul>
-                    <li>About Me</li>
-                    <li>Portfolio</li>
-                </ul>
-            </div>   
-        </div>
+    <div class="container">
 
         <div>
+              <div class="header">
+                  <div class="navbar">
+                      <div class="name">
+                         <h1>Daniel Joji Koons</h1>
+                      </div>
+                        
+                        <ul class="links">
+                          <li><a href="index.html">About</a></li>
+                          <li><a href="portfolio.html">Portfolio</a></li>
+                          <li><a href="contact.html">Contact</a></LI>
+                        </ul>
+                  </div>
+              </div>
+        </div>
+
+        <div class="content">
             <div>
-            <h2>About Me</h2>
-                <hr>
-                <img src="assets/images/profile.jpg" 
-                width="200px" 
-                height="200px">        
-                <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h1 class="about">About Me</h1>
+            <img class="profile" src="assets/images/profile.jpg" 
+            width="200px" 
+            height="200px">
+                <p class="paragraph">
+                    Daniel Joji Koons is a fresh graduate from Arizona State University, with a BA in the major of Digital Culture 
+                    with a focus in media processing. His coursework was mainly focused in programming in a variety of languages, 
+                    such as Java, C#, Git, and Processing. 
+                </p>
+                <p class="paragraph">
+                    He is also very resourceful in using Adobe products, 
+                    such as Adobe Premiere and Adobe After Effects, as well as game development engines such as GameMaker, 
+                    Unity, and Unreal. His creative projects consist of photography, videography, video editing, and writing music.
+                </p>
+                <p class="paragraph">
+                    Currently, he is pursuing a certificate in Full Stack Engineering through the University of Arizona, 
+                    with hopes to enter a career in the software development industry. 
+                </p>
             </div>
         </div>
+
+
+
+    </div>
+
+    <div class="footer">
+            Copyright
+    </div>
+
 </body>
 </html>
