--- a/index.html
+++ b/index.html
@@ -29,16 +29,19 @@
               </div>
         </div>
 
-        <div class="content">
-            <div>
+        <div>
+            <div class="content">
             <h1 class="about">About Me</h1>
-            <img class="profile" src="assets/images/profile.jpg" 
-            width="200px" 
-            height="200px">
+            <img class="profile" 
+            alt="Joji_Profile"
+            src="assets/images/profile.jpg" 
+            width="250px" 
+            height="250px">
                 <p class="paragraph">
                     Daniel Joji Koons is a fresh graduate from Arizona State University, with a BA in the major of Digital Culture 
                     with a focus in media processing. His coursework was mainly focused in programming in a variety of languages, 
-                    such as Java, C#, Git, and Processing. 
+                    such as Java, C#, Git, and Processing. The subjects varied from topics like iOS development, web development,
+                    game design, and graphic design.
                 </p>
                 <p class="paragraph">
                     He is also very resourceful in using Adobe products, 
