--- a/portfolio.html
+++ b/portfolio.html
@@ -36,55 +36,45 @@
 
                         <img 
                             class="portfolio"
-                            src="assets/images/profile.jpg" 
-                            width="200px" 
-                            height="200px"
+                            src="assets/images/music.jpg" 
                         >
-                        <div class="image-banner">Assignment</div>
+                        <div class="image-banner">Music</div>
                     </div>
                     
                     <div class="img-container">   
 
                         <img 
                             class="portfolio"
-                            src="assets/images/profile.jpg" 
-                            width="200px" 
-                            height="200px"
+                            src="assets/images/UI.jpg" 
                         >
-                        <div class="image-banner">Assignment</div>
+                        <div class="image-banner">UI</div>
                     </div>
 
                     <div class="img-container">   
 
                         <img 
                             class="portfolio"
-                            src="assets/images/profile.jpg" 
-                            width="200px" 
-                            height="200px"
+                            src="assets/images/technics.jpg" 
                         >
-                        <div class="image-banner">Assignment</div>
+                        <div class="image-banner">Circuits</div>
                     </div>
 
                     <div class="img-container">   
 
                         <img 
                             class="portfolio"
-                            src="assets/images/profile.jpg" 
-                            width="200px" 
-                            height="200px"
+                            src="assets/images/mobile.jpg" 
                         >
-                        <div class="image-banner">Assignment</div>
+                        <div class="image-banner">Mobile Apps</div>
                     </div>
 
                     <div class="img-container">   
 
                         <img 
                             class="portfolio"
-                            src="assets/images/profile.jpg" 
-                            width="200px" 
-                            height="200px"
+                            src="assets/images/hardware.jpg" 
                         >
-                        <div class="image-banner">Assignment</div>
+                        <div class="image-banner">Hardware</div>
                     </div>
 
             </div>
