--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                     <input type="email" name="Email" value="example@gmail.com">
                     <p class="subject">Message</p>
                     <textarea ROWS="15"></textarea>
-                    <button class="submit-button" type="submit">Submit</button>
+                    <button class="submit-button" type="submit" disabled>Submit</button>
                 </form>
             </div>
 
